@@ -22,7 +22,7 @@ package TestCase::Lib::SPVM::Util {
   sub test_split : int () {
     {
       my $str = "foo,bar,baz";
-      my $split_strs = split(",", $str, -1);
+      my $split_strs = split(",", $str);
       unless (equals_strarray($split_strs, ["foo", "bar", "baz"])) {
         return 0;
       }
@@ -30,7 +30,7 @@ package TestCase::Lib::SPVM::Util {
     
     {
       my $str = "foo,bar,";
-      my $split_strs = split(",", $str, -1);
+      my $split_strs = split(",", $str);
       unless (equals_strarray($split_strs, ["foo", "bar", ""])) {
         return 0;
       }
@@ -38,7 +38,7 @@ package TestCase::Lib::SPVM::Util {
 
     {
       my $str = ",foo,,bar,,";
-      my $split_strs = split(",", $str, -1);
+      my $split_strs = split(",", $str);
       unless (equals_strarray($split_strs, ["", "foo", "", "bar", "", ""])) {
         return 0;
       }
@@ -46,21 +46,21 @@ package TestCase::Lib::SPVM::Util {
 
     {
       my $str = "foo : bar : baz";
-      my $split_strs = split(" : ", $str, -1);
+      my $split_strs = split(" : ", $str);
       unless (equals_strarray($split_strs, ["foo", "bar", "baz"])) {
         return 0;
       }
     }
     {
       my $str = "foo : bar : ";
-      my $split_strs = split(" : ", $str, -1);
+      my $split_strs = split(" : ", $str);
       unless (equals_strarray($split_strs, ["foo", "bar", ""])) {
         return 0;
       }
     }
     {
       my $str = " : foo :  : bar :  : ";
-      my $split_strs = split(" : ", $str, -1);
+      my $split_strs = split(" : ", $str);
       unless (equals_strarray($split_strs, ["", "foo", "", "bar", "", ""])) {
         return 0;
       }
@@ -68,21 +68,21 @@ package TestCase::Lib::SPVM::Util {
 
     {
       my $str = "foo---bar---baz";
-      my $split_strs = split("---", $str, -1);
+      my $split_strs = split("---", $str);
       unless (equals_strarray($split_strs, ["foo", "bar", "baz"])) {
         return 0;
       }
     }
     {
       my $str = "foo---bar---";
-      my $split_strs = split("---", $str, -1);
+      my $split_strs = split("---", $str);
       unless (equals_strarray($split_strs, ["foo", "bar", ""])) {
         return 0;
       }
     }
     {
       my $str = "---foo------bar------";
-      my $split_strs = split("---", $str, -1);
+      my $split_strs = split("---", $str);
       unless (equals_strarray($split_strs, ["", "foo", "", "bar", "", ""])) {
         return 0;
       }
@@ -90,7 +90,7 @@ package TestCase::Lib::SPVM::Util {
 
     {
       my $str = "foo--!bar---baz";
-      my $split_strs = split("---", $str, -1);
+      my $split_strs = split("---", $str);
       unless (equals_strarray($split_strs, ["foo--!bar", "baz"])) {
         return 0;
       }
